RESOLVED FIXED197227
Video stream freeze on front camera orientation changing
https://bugs.webkit.org/show_bug.cgi?id=197227
Summary Video stream freeze on front camera orientation changing
Igor
Reported 2019-04-24 02:05:52 PDT
If remote party doesn't support urn:3gpp:video-orientation, then Safari doesn't send video if camera was rotated to left. What steps will reproduce the problem? Here is tweaked WebRTC PeerConnection sample (https://p3.flashphoner.com:4443/samples/src/content/peerconnection/pc1/), in this example SDP 'extmap' removed before applying with setLocalDescription. 1) Press Start 2) Press Call 3) Try to rotate phone to left, video is freeze, try to rotate phone to right, video is going back. What is the expected result? The video should not freeze during any rotation. What do you see instead? Video freezes on iOS safari when camera orientation changed to left. What version of the product are you using? On what operating system? iPhone: iPhone 5S with iOS 12.2 with Safari.
Attachments
Patch (5.27 KB, patch)
2019-05-06 15:32 PDT, youenn fablet
no flags
Archive of layout-test-results from ews214 for win-future (13.59 MB, application/zip)
2019-05-06 21:36 PDT, EWS Watchlist
no flags
Radar WebKit Bug Importer
Comment 1 2019-04-24 11:39:04 PDT
youenn fablet
Comment 2 2019-05-06 15:32:25 PDT
EWS Watchlist
Comment 3 2019-05-06 21:36:22 PDT
Comment on attachment 369180 [details] Patch Attachment 369180 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/12119138 New failing tests: svg/repaint/remove-border-property-on-root.html
EWS Watchlist
Comment 4 2019-05-06 21:36:24 PDT
Created attachment 369225 [details] Archive of layout-test-results from ews214 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews214 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
youenn fablet
Comment 5 2019-05-06 21:45:31 PDT
Comment on attachment 369180 [details] Patch win error unrelated
WebKit Commit Bot
Comment 6 2019-05-07 14:07:07 PDT
Comment on attachment 369180 [details] Patch Clearing flags on attachment: 369180 Committed r245033: <https://trac.webkit.org/changeset/245033>
WebKit Commit Bot
Comment 7 2019-05-07 14:07:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.