Video stream freeze on front camera orientation changing https://bugs.webkit.org/show_bug.cgi?id=197227 <rdar://problem/50175498>

Reviewed by Eric Carlson.

Source/WebCore:

Use m_currentRotationSessionAngle instead of m_currentRotation to create or not a new rotation session.
Covered by updated test.

* platform/mediastream/mac/RealtimeOutgoingVideoSourceCocoa.h:
* platform/mediastream/mac/RealtimeOutgoingVideoSourceCocoa.mm:
(WebCore::RealtimeOutgoingVideoSourceCocoa::rotatePixelBuffer):

LayoutTests:

* webrtc/video-rotation-expected.txt:
* webrtc/video-rotation.html:


Canonical link: https://commits.webkit.org/211812@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245033 268f45cc-cd09-0410-ab3c-d52691b4dbfc